--- a/Example/URLNavigatorExt.xcodeproj/xcshareddata/xcschemes/URLNavigatorExt-Example.xcscheme
+++ b/Example/URLNavigatorExt.xcodeproj/xcshareddata/xcschemes/URLNavigatorExt-Example.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-               BuildableName = "URLNavigatorExt_Example.app"
-               BlueprintName = "URLNavigatorExt_Example"
+               BuildableName = "URLNavigatorExtExample.app"
+               BlueprintName = "URLNavigatorExtExample"
                ReferencedContainer = "container:URLNavigatorExt.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,8 +40,16 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
+            BuildableName = "URLNavigatorExtExample.app"
+            BlueprintName = "URLNavigatorExtExample"
+            ReferencedContainer = "container:URLNavigatorExt.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -54,23 +62,11 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "URLNavigatorExt_Example.app"
-            BlueprintName = "URLNavigatorExt_Example"
-            ReferencedContainer = "container:URLNavigatorExt.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -82,13 +78,11 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "URLNavigatorExt_Example.app"
-            BlueprintName = "URLNavigatorExt_Example"
+            BuildableName = "URLNavigatorExtExample.app"
+            BlueprintName = "URLNavigatorExtExample"
             ReferencedContainer = "container:URLNavigatorExt.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -101,8 +95,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "URLNavigatorExt_Example.app"
-            BlueprintName = "URLNavigatorExt_Example"
+            BuildableName = "URLNavigatorExtExample.app"
+            BlueprintName = "URLNavigatorExtExample"
             ReferencedContainer = "container:URLNavigatorExt.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
