--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,12 +1,10 @@
 use_frameworks!
 
-target 'URLNavigatorExt_Example' do
+target 'URLNavigatorExtExample' do
   pod 'URLNavigatorExt', :path => '../'
-  pod 'Sourcery'
   
   target 'URLNavigatorExt_Tests' do
     inherit! :search_paths
-
     
   end
 end
